Fix right align for Safari

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ section {
 .align-right {
 	-moz-text-align-last: right; /* For Firefox prior 58.0 */
 	text-align-last: right;
+	text-align: right; /* Safari */
 }
 
 .infos > .pill {
